--- a/demo8/package.json
+++ b/demo8/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.4",
     "element-ui": "^2.15.6",
     "vue": "^2.6.11",
